# churn-prediction

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: main.yml
model/: forest.py
tests/: conftest.py
tests/integration/: test_evaluation.py  test_preprocessing.py
